--- a/DatingApp-SPA/src/assets/i18n/ru.json
+++ b/DatingApp-SPA/src/assets/i18n/ru.json
@@ -105,5 +105,6 @@
   "LoginSuccess" : "Вход выполнен успешно",
   "LoginError": "Имя или пароль неверны!",
   "RegSuccess": "Регистрация успешна!",
-  "RegError": "Регистрация не успешна!"
+  "RegError": "Регистрация не успешна!",
+  "LikeError" : "Вы уже отметили этого человека!"
 }
